# gproxyswitcher

./: AUTHORS  MAINTAINERS  Makefile.am  autogen.sh  configure.ac  index.html
data/: Makefile.am  gproxyswitcher.desktop
data/icons/: Makefile.am
data/icons/128x128/apps/: Makefile.am
data/icons/128x128/status/: Makefile.am
data/icons/16x16/apps/: Makefile.am
data/icons/16x16/status/: Makefile.am
data/icons/22x22/apps/: Makefile.am
data/icons/22x22/status/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/24x24/apps/: Makefile.am
data/icons/24x24/status/: Makefile.am
data/icons/32x32/apps/: Makefile.am
data/icons/32x32/status/: Makefile.am
data/icons/48x48/apps/: Makefile.am
data/icons/48x48/status/: Makefile.am
data/icons/64x64/apps/: Makefile.am
data/icons/64x64/status/: Makefile.am
data/icons/72x72/apps/: Makefile.am
data/icons/72x72/status/: Makefile.am
data/icons/96x96/apps/: Makefile.am
data/icons/96x96/status/: Makefile.am
data/icons/scalable/apps/: Makefile.am
data/icons/scalable/status/: Makefile.am
src/: Makefile.am  about.vala  applet.vala  config.vala  locations-manager.vala  main.vala  tray.vala
vapi/: Makefile.am  config.vapi
