NULL = 

#Build in these directories:

SUBDIRS = \
	src \
	data \
	vapi \
	po \
	$(NULL)

#gproxyswitcherdocdir = ${prefix}/doc/gproxyswitcher
noinst_DATA = \
	ChangeLog \
	README \
	COPYING \
	AUTHORS \
	INSTALL \
	NEWS\
	$(NULL)

EXTRA_DIST = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in\
	$(NULL)

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update \
	po/.intltool-merge-cache \
	$(NULL)

